Fix code tag rendering on mobile

--- a/public/styles/assets/css/main.css
+++ b/public/styles/assets/css/main.css
@@ -1568,9 +1568,11 @@
 	code {
 		background: rgba(160, 160, 160, 0.075);
 		border: solid 1px rgba(160, 160, 160, 0.3);
+		display: block;
 		font-family: "Courier New", monospace;
 		font-size: 0.9em;
 		margin: 0 0.25em;
+		overflow-wrap: anywhere;
 		padding: 0.25em 0.65em;
 	}
 
